--- a/images.qrc
+++ b/images.qrc
@@ -1,2 +1,5 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/image">
+        <file>image/timg.jpg</file>
+    </qresource>
+</RCC>
