--- a/gamewindow.ui
+++ b/gamewindow.ui
@@ -13,53 +13,122 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLCDNumber" name="blackTimer">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
+  <widget class="QLineEdit" name="lineEdit_black">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>210</y>
-     <width>121</width>
+     <x>780</x>
+     <y>250</y>
+     <width>113</width>
      <height>51</height>
     </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Algerian</family>
-    </font>
-   </property>
-   <property name="toolTipDuration">
-    <number>0</number>
    </property>
   </widget>
-  <widget class="QLCDNumber" name="whiteTimer">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
+  <widget class="QLineEdit" name="lineEdit_white">
    <property name="geometry">
     <rect>
-     <x>730</x>
-     <y>420</y>
-     <width>121</width>
+     <x>780</x>
+     <y>340</y>
+     <width>113</width>
      <height>51</height>
     </rect>
    </property>
-   <property name="autoFillBackground">
-    <bool>false</bool>
+  </widget>
+  <widget class="QTimeEdit" name="timeEdit">
+   <property name="geometry">
+    <rect>
+     <x>847</x>
+     <y>470</y>
+     <width>91</width>
+     <height>41</height>
+    </rect>
    </property>
-   <property name="inputMethodHints">
-    <set>Qt::ImhNone</set>
+   <property name="displayFormat">
+    <string>H:mm:ss</string>
    </property>
-   <property name="segmentStyle">
-    <enum>QLCDNumber::Filled</enum>
+   <property name="timeSpec">
+    <enum>Qt::LocalTime</enum>
    </property>
-   <property name="value" stdset="0">
-    <double>60.000000000000000</double>
+   <property name="time">
+    <time>
+     <hour>0</hour>
+     <minute>0</minute>
+     <second>0</second>
+    </time>
    </property>
-   <property name="intValue" stdset="0">
-    <number>60</number>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>470</y>
+     <width>111</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>请设置落子限时</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btnStop">
+   <property name="geometry">
+    <rect>
+     <x>800</x>
+     <y>550</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>暂停游戏</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>671</x>
+     <y>270</y>
+     <width>91</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>黑棋剩余时间</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>670</x>
+     <y>360</y>
+     <width>91</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>白棋剩余时间</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lineEdit_total">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>110</y>
+     <width>111</width>
+     <height>51</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>690</x>
+     <y>130</y>
+     <width>72</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>总共用时</string>
    </property>
   </widget>
  </widget>
