--- a/gamewindow.ui
+++ b/gamewindow.ui
@@ -71,11 +71,17 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>670</x>
+     <x>640</x>
      <y>470</y>
-     <width>111</width>
+     <width>131</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文隶书</family>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>请设置落子限时</string>
@@ -90,18 +96,33 @@
      <height>28</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>华文隶书</family>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
    <property name="text">
     <string>悔棋</string>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>671</x>
+     <x>641</x>
      <y>270</y>
-     <width>91</width>
+     <width>111</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文隶书</family>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>黑棋剩余时间</string>
@@ -110,11 +131,17 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>670</x>
+     <x>640</x>
      <y>360</y>
-     <width>91</width>
+     <width>111</width>
      <height>20</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文隶书</family>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>白棋剩余时间</string>
@@ -154,12 +181,43 @@
     <rect>
      <x>670</x>
      <y>550</y>
-     <width>93</width>
-     <height>28</height>
+     <width>111</width>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文隶书</family>
+     <pointsize>15</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>重新开始</string>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="restart_2">
+   <property name="geometry">
+    <rect>
+     <x>660</x>
+     <y>590</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文隶书</family>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>返回主菜单</string>
+   </property>
+   <property name="flat">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
