--- a/gamewindow.ui
+++ b/gamewindow.ui
@@ -166,11 +166,17 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>690</x>
+     <x>680</x>
      <y>130</y>
      <width>72</width>
      <height>15</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>华文隶书</family>
+     <pointsize>11</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>总共用时</string>
